src/yesworkflow/parse/YWParser.py
# Generated from YW.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YWParser ( Parser ):

    grammarFileName = "YW.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'", "'''", "<INVALID>", 
                     "'/'", "'{'", "'}'", "<INVALID>", "':'" ]

    symbolicNames = [ "<INVALID>", "AsKeyword", "BeginKeyword", "DescKeyword", 
                      "EndKeyword", "FileKeyword", "InKeyword", "OutKeyword", 
                      "ParamKeyword", "UriKeyword", "DQ", "SQ", "SPACE", 
                      "SLASH", "LEFTBRACE", "RIGHTBRACE", "NEWLINE", "COLON", 
                      "WORD", "OTHER" ]

    RULE_script = 0
    RULE_block = 1
    RULE_nestedBlocks = 2
    RULE_blockAttribute = 3
    RULE_io = 4
    RULE_port = 5
    RULE_portAttribute = 6
    RULE_alias = 7
    RULE_begin = 8
    RULE_blockDesc = 9
    RULE_portDesc = 10
    RULE_end = 11
    RULE_file = 12
    RULE_uri = 13
    RULE_misplacedEnd = 14
    RULE_misplacedBeginChild = 15
    RULE_misplacedPortChild = 16
    RULE_misplacedKeyword = 17
    RULE_resource = 18
    RULE_portKeyword = 19
    RULE_inputKeyword = 20
    RULE_outputKeyword = 21
    RULE_blockName = 22
    RULE_portName = 23
    RULE_dataName = 24
    RULE_description = 25
    RULE_pathElement = 26
    RULE_pathVariable = 27
    RULE_pathConstant = 28
    RULE_variableName = 29
    RULE_pathTemplate = 30
    RULE_uriTemplate = 31
    RULE_scheme = 32
    RULE_phrase = 33
    RULE_unquotedPhrase = 34
    RULE_word = 35
    RULE_unquotedWord = 36
    RULE_na = 37

    ruleNames =  [ "script", "block", "nestedBlocks", "blockAttribute", 
                   "io", "port", "portAttribute", "alias", "begin", "blockDesc", 
                   "portDesc", "end", "file", "uri", "misplacedEnd", "misplacedBeginChild", 
                   "misplacedPortChild", "misplacedKeyword", "resource", 
                   "portKeyword", "inputKeyword", "outputKeyword", "blockName", 
                   "portName", "dataName", "description", "pathElement", 
                   "pathVariable", "pathConstant", "variableName", "pathTemplate", 
                   "uriTemplate", "scheme", "phrase", "unquotedPhrase", 
                   "word", "unquotedWord", "na" ]

    EOF = Token.EOF
    AsKeyword=1
    BeginKeyword=2
    DescKeyword=3
    EndKeyword=4
    FileKeyword=5
    InKeyword=6
    OutKeyword=7
    ParamKeyword=8
    UriKeyword=9
    DQ=10
    SQ=11
    SPACE=12
    SLASH=13
    LEFTBRACE=14
    RIGHTBRACE=15
    NEWLINE=16
    COLON=17
    WORD=18
    OTHER=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.BlockContext)
            else:
                return self.getTypedRuleContext(YWParser.BlockContext,i)


        def EOF(self):
            return self.getToken(YWParser.EOF, 0)

        def na(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.NaContext)
            else:
                return self.getTypedRuleContext(YWParser.NaContext,i)


        def getRuleIndex(self):
            return YWParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = YWParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                self.state = 76
                self.na()


            self.state = 79
            self.block()
            self.state = 86
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                        self.state = 80
                        self.na()


                    self.state = 83
                    self.block() 
                self.state = 88
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                self.state = 89
                self.na()


            self.state = 92
            self.match(YWParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def begin(self):
            return self.getTypedRuleContext(YWParser.BeginContext,0)


        def nestedBlocks(self):
            return self.getTypedRuleContext(YWParser.NestedBlocksContext,0)


        def end(self):
            return self.getTypedRuleContext(YWParser.EndContext,0)


        def blockAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.BlockAttributeContext)
            else:
                return self.getTypedRuleContext(YWParser.BlockAttributeContext,i)


        def io(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.IoContext)
            else:
                return self.getTypedRuleContext(YWParser.IoContext,i)


        def na(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.NaContext)
            else:
                return self.getTypedRuleContext(YWParser.NaContext,i)


        def getRuleIndex(self):
            return YWParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = YWParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.begin()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                        self.state = 95
                        self.na()


                    self.state = 98
                    self.blockAttribute() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                        self.state = 104
                        self.na()


                    self.state = 107
                    self.io() 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 113
            self.nestedBlocks()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                self.state = 114
                self.na()


            self.state = 117
            self.end()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NestedBlocksContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.BlockContext)
            else:
                return self.getTypedRuleContext(YWParser.BlockContext,i)


        def na(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.NaContext)
            else:
                return self.getTypedRuleContext(YWParser.NaContext,i)


        def getRuleIndex(self):
            return YWParser.RULE_nestedBlocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNestedBlocks" ):
                listener.enterNestedBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNestedBlocks" ):
                listener.exitNestedBlocks(self)




    def nestedBlocks(self):

        localctx = YWParser.NestedBlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nestedBlocks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                        self.state = 119
                        self.na()


                    self.state = 122
                    self.block() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockDesc(self):
            return self.getTypedRuleContext(YWParser.BlockDescContext,0)


        def getRuleIndex(self):
            return YWParser.RULE_blockAttribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockAttribute" ):
                listener.enterBlockAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockAttribute" ):
                listener.exitBlockAttribute(self)




    def blockAttribute(self):

        localctx = YWParser.BlockAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_blockAttribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.blockDesc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def port(self):
            return self.getTypedRuleContext(YWParser.PortContext,0)


        def portAttribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.PortAttributeContext)
            else:
                return self.getTypedRuleContext(YWParser.PortAttributeContext,i)


        def na(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.NaContext)
            else:
                return self.getTypedRuleContext(YWParser.NaContext,i)


        def getRuleIndex(self):
            return YWParser.RULE_io

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIo" ):
                listener.enterIo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIo" ):
                listener.exitIo(self)




    def io(self):

        localctx = YWParser.IoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_io)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.port()
            self.state = 137
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 132
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1047552) != 0):
                        self.state = 131
                        self.na()


                    self.state = 134
                    self.portAttribute() 
                self.state = 139
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def portKeyword(self):
            return self.getTypedRuleContext(YWParser.PortKeywordContext,0)


        def portName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YWParser.PortNameContext)
            else:
                return self.getTypedRuleContext(YWParser.PortNameContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_port

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort" ):
                listener.enterPort(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort" ):
                listener.exitPort(self)




    def port(self):

        localctx = YWParser.PortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_port)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.portKeyword()
            self.state = 147 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 142 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 141
                        self.match(YWParser.SPACE)
                        self.state = 144 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==12):
                            break

                    self.state = 146
                    self.portName()

                else:
                    raise NoViableAltException(self)
                self.state = 149 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortAttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def portDesc(self):
            return self.getTypedRuleContext(YWParser.PortDescContext,0)


        def alias(self):
            return self.getTypedRuleContext(YWParser.AliasContext,0)


        def resource(self):
            return self.getTypedRuleContext(YWParser.ResourceContext,0)


        def getRuleIndex(self):
            return YWParser.RULE_portAttribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPortAttribute" ):
                listener.enterPortAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPortAttribute" ):
                listener.exitPortAttribute(self)




    def portAttribute(self):

        localctx = YWParser.PortAttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_portAttribute)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.portDesc()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.alias()
                pass
            elif token in [5, 9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.resource()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AsKeyword(self):
            return self.getToken(YWParser.AsKeyword, 0)

        def dataName(self):
            return self.getTypedRuleContext(YWParser.DataNameContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)




    def alias(self):

        localctx = YWParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_alias)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(YWParser.AsKeyword)
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.match(YWParser.SPACE)
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 162
            self.dataName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BeginKeyword(self):
            return self.getToken(YWParser.BeginKeyword, 0)

        def blockName(self):
            return self.getTypedRuleContext(YWParser.BlockNameContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = YWParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_begin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(YWParser.BeginKeyword)
            self.state = 166 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 165
                self.match(YWParser.SPACE)
                self.state = 168 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 170
            self.blockName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockDescContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DescKeyword(self):
            return self.getToken(YWParser.DescKeyword, 0)

        def description(self):
            return self.getTypedRuleContext(YWParser.DescriptionContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_blockDesc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockDesc" ):
                listener.enterBlockDesc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockDesc" ):
                listener.exitBlockDesc(self)




    def blockDesc(self):

        localctx = YWParser.BlockDescContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockDesc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(YWParser.DescKeyword)
            self.state = 174 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 173
                self.match(YWParser.SPACE)
                self.state = 176 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 178
            self.description()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PortDescContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DescKeyword(self):
            return self.getToken(YWParser.DescKeyword, 0)

        def description(self):
            return self.getTypedRuleContext(YWParser.DescriptionContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_portDesc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPortDesc" ):
                listener.enterPortDesc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPortDesc" ):
                listener.exitPortDesc(self)




    def portDesc(self):

        localctx = YWParser.PortDescContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_portDesc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(YWParser.DescKeyword)
            self.state = 182 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 181
                self.match(YWParser.SPACE)
                self.state = 184 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 186
            self.description()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EndKeyword(self):
            return self.getToken(YWParser.EndKeyword, 0)

        def blockName(self):
            return self.getTypedRuleContext(YWParser.BlockNameContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd" ):
                listener.enterEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd" ):
                listener.exitEnd(self)




    def end(self):

        localctx = YWParser.EndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_end)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(YWParser.EndKeyword)
            self.state = 195
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.state = 190 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 189
                    self.match(YWParser.SPACE)
                    self.state = 192 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==12):
                        break

                self.state = 194
                self.blockName()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FileKeyword(self):
            return self.getToken(YWParser.FileKeyword, 0)

        def pathTemplate(self):
            return self.getTypedRuleContext(YWParser.PathTemplateContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = YWParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(YWParser.FileKeyword)
            self.state = 199 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 198
                    self.match(YWParser.SPACE)

                else:
                    raise NoViableAltException(self)
                self.state = 201 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,22,self._ctx)

            self.state = 203
            self.pathTemplate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UriContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UriKeyword(self):
            return self.getToken(YWParser.UriKeyword, 0)

        def uriTemplate(self):
            return self.getTypedRuleContext(YWParser.UriTemplateContext,0)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(YWParser.SPACE)
            else:
                return self.getToken(YWParser.SPACE, i)

        def getRuleIndex(self):
            return YWParser.RULE_uri

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUri" ):
                listener.enterUri(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUri" ):
                listener.exitUri(self)




    def uri(self):

        localctx = YWParser.UriContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_uri)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.match(YWParser.UriKeyword)
            self.state = 207 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 206
                    self.match(YWParser.SPACE)

                else:
                    raise NoViableAltException(self)
                self.state = 209 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

            self.state = 211
            self.uriTemplate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MisplacedEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EndKeyword(self):
            return self.getToken(YWParser.EndKeyword, 0)

        def getRuleIndex(self):
            return YWParser.RULE_misplacedEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMisplacedEnd" ):
                listener.enterMisplacedEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMisplacedEnd" ):
                listener.exitMisplacedEnd(self)



